--- a/formulario_requisicao.html
+++ b/formulario_requisicao.html
@@ -5,11 +5,11 @@
   <title>Nova Requisição - Teko Porã</title>
   <style>
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-      font-size: 14px;
-      padding: 20px;
-      background-color: #f9fafb;
-    }
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+  font-size: 15px;
+  padding: 16px;
+  background-color: #f9fafb;
+}
 
     .form-group {
       margin-bottom: 15px;
@@ -29,7 +29,7 @@
       padding: 10px;
       border-radius: 6px;
       border: 1px solid #d0d0d0;
-      font-size: 14px;
+      font-size: 16px;
       box-sizing: border-box;
     }
 
@@ -87,6 +87,26 @@
       color: #555;
       margin-top: 5px;
     }
+@media (max-width: 600px) {
+  body {
+    padding: 10px;
+  }
+
+  .form-group {
+    margin-bottom: 12px;
+  }
+
+  .info-box,
+  .warning-box {
+    font-size: 13px;
+    padding: 8px;
+  }
+
+  .btn {
+    width: 100%;      /* botão ocupar largura total no celular */
+    text-align: center;
+  }
+}
   </style>
 </head>
 <body>
